read me details

--- a/data-cleaning/credit_risk.ipynb
+++ b/data-cleaning/credit_risk.ipynb
@@ -2,54 +2,130 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5743cbd8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 367 entries, 0 to 366\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   Loan_ID            367 non-null    object \n",
-      " 1   Gender             356 non-null    object \n",
-      " 2   Married            367 non-null    object \n",
-      " 3   Dependents         357 non-null    object \n",
-      " 4   Education          367 non-null    object \n",
-      " 5   Self_Employed      344 non-null    object \n",
-      " 6   ApplicantIncome    367 non-null    int64  \n",
-      " 7   CoapplicantIncome  367 non-null    int64  \n",
-      " 8   LoanAmount         362 non-null    float64\n",
-      " 9   Loan_Amount_Term   361 non-null    float64\n",
-      " 10  Credit_History     338 non-null    float64\n",
-      " 11  Property_Area      367 non-null    object \n",
-      "dtypes: float64(3), int64(2), object(7)\n",
-      "memory usage: 34.5+ KB\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ApplicantIncome</th>\n",
+       "      <th>CoapplicantIncome</th>\n",
+       "      <th>LoanAmount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Credit_History</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>367.000000</td>\n",
+       "      <td>367.000000</td>\n",
+       "      <td>362.000000</td>\n",
+       "      <td>361.000000</td>\n",
+       "      <td>338.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4805.599455</td>\n",
+       "      <td>1569.577657</td>\n",
+       "      <td>136.132597</td>\n",
+       "      <td>342.537396</td>\n",
+       "      <td>0.825444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4910.685399</td>\n",
+       "      <td>2334.232099</td>\n",
+       "      <td>61.366652</td>\n",
+       "      <td>65.156643</td>\n",
+       "      <td>0.380150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2864.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>100.250000</td>\n",
+       "      <td>360.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3786.000000</td>\n",
+       "      <td>1025.000000</td>\n",
+       "      <td>125.000000</td>\n",
+       "      <td>360.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5060.000000</td>\n",
+       "      <td>2430.500000</td>\n",
+       "      <td>158.000000</td>\n",
+       "      <td>360.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>72529.000000</td>\n",
+       "      <td>24000.000000</td>\n",
+       "      <td>550.000000</td>\n",
+       "      <td>480.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Loan_ID               0\n",
-       "Gender               11\n",
-       "Married               0\n",
-       "Dependents           10\n",
-       "Education             0\n",
-       "Self_Employed        23\n",
-       "ApplicantIncome       0\n",
-       "CoapplicantIncome     0\n",
-       "LoanAmount            5\n",
-       "Loan_Amount_Term      6\n",
-       "Credit_History       29\n",
-       "Property_Area         0\n",
-       "dtype: int64"
+       "       ApplicantIncome  CoapplicantIncome  LoanAmount  Loan_Amount_Term  \\\n",
+       "count       367.000000         367.000000  362.000000        361.000000   \n",
+       "mean       4805.599455        1569.577657  136.132597        342.537396   \n",
+       "std        4910.685399        2334.232099   61.366652         65.156643   \n",
+       "min           0.000000           0.000000   28.000000          6.000000   \n",
+       "25%        2864.000000           0.000000  100.250000        360.000000   \n",
+       "50%        3786.000000        1025.000000  125.000000        360.000000   \n",
+       "75%        5060.000000        2430.500000  158.000000        360.000000   \n",
+       "max       72529.000000       24000.000000  550.000000        480.000000   \n",
+       "\n",
+       "       Credit_History  \n",
+       "count      338.000000  \n",
+       "mean         0.825444  \n",
+       "std          0.380150  \n",
+       "min          0.000000  \n",
+       "25%          1.000000  \n",
+       "50%          1.000000  \n",
+       "75%          1.000000  \n",
+       "max          1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,9 +134,31 @@
     "import pandas as pd\n",
     "# risk_df = pd.read_csv(\"../data/credit_risk_dataset.csv\");\n",
     "loan_df = pd.read_csv(\"../data/loan-test.csv\")\n",
-    "loan_df.info()\n",
+    "# loan_df.info()\n",
     "loan_df.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11e4a42c",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning Approach\n",
+    " - for any datasets, fill in missing values using mean / median / mode or KNN\n",
+    " - the type of tail for the feature, then using the type, determine method of filling in missing values\n",
+    " - look at the units, and ensure thet units are standardized according to US (currency is $, length can be ft and in)\n",
+    " - just for extra check, look for unique values within features\n",
+    " - for any boolean features --> true is 1 and false is 0\n",
+    " - for any categorical features --> if less than 4 to 5 unique values, encode them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f52c07c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
