new directory for storing cleaned datasets

--- a/data-cleaning/clean_loan_test_train.ipynb
+++ b/data-cleaning/clean_loan_test_train.ipynb
@@ -300,11 +300,28 @@
     "        train_df.drop(columns=[feature], inplace=True)\n",
     "        train_df = pd.concat([train_df, train_encode], axis=1)\n",
     "\n",
-    "# adding back loan ID's to the dataset\n",
-    "train_df.insert(0, 'Loan_ID', loan_ids)\n",
-    "\n",
+    "s\n",
     "# displaying the new dataframe\n",
     "train_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acee1986",
+   "metadata": {},
+   "source": [
+    "## <span style=\"color: #04A4E2\"> Saving the File </span>\n",
+    "As a last step, we would like to now save the dataset into a `.csv` file so that we can re-use the data for data visualization and statistical testing method purposes, which allow us to gain more insights into the datasets we deal with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "593282a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.to_csv(\"../cleaned-dataset/cleaned_train.csv\", index=False)"
    ]
   }
  ],
@@ -324,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
